--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
     .main-image-desktop{
       display: none;
     }
-
+    .nav-text-list{
+      display: none;
+    }
     @media (min-width:1024px) {
         body{
           height: 100vh;
