--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     .main-image-desktop{
       display: none;
     }
-    .nav-text-list{
+    .nav-text{
       display: none;
     }
     @media (min-width:1024px) {
@@ -242,6 +242,8 @@
           margin: 0 .5rem ;
           cursor: pointer;
         }
+      .nav-text{
+        display :block;
     }
   </style>
 </head>
